--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -18,56 +18,78 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
-    <!-- Custom CSS (TODO: move to main.css) -->
-    <style>
-        .navbar-dark {}
+    <!-- Custom CSS -->
+    <style type="text/css" media="all">
+        .header-link {
+            font-size: 14px;
+            font-family: "Segoe UI";
+            font-weight: 600;
+        }
 
-        .navbar-dark .nav .nav-item .nav-link {
-            /* color: white; */
-            font-weight: 500;
+        .dropdown-link {
+            font-size: 14px;
+            font-family: "Segoe UI";
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <!-- TODO: Consider using <section> tags rather than <row> -->
-        <div class="navbar navbar-dark">
-            <a href="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#">
+                {% load static %}
+                <img src="{% static "hoprgovet/logo.png" %}" width="75px" height="75px" alt="Home">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Case Studies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Resources</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Careers</a>
-                </li>
-            </ul>
-        </div>
-        <main>
-            <header>
-                <figure style="background-position: center -236.2px; background-image: url('https://www.tivix.com/wp-content/uploads/2019/06/design-thinking-hero-1920x0-c-default.jpg');">
-                </figure>
-            </header>
-            <section></section>
-            <section></section>
-            <section></section>
-            <footer></footer>
-        </main>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle header-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            News
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item dropdown-link" href="#">News 1</a>
+                            <a class="dropdown-item dropdown-link" href="#">News 2</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle header-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Events
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item dropdown-link" href="#">Events 1</a>
+                            <a class="dropdown-item dropdown-link" href="#">Events 2</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link header-link" href="#">Committee</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle header-link"i href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Laws
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item dropdown-link" href="#">Enacted Laws</a>
+                            <a class="dropdown-item dropdown-link" href="#">Draft Laws</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link header-link" href="#">Secretariat</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <div class="input-group input-group-sm">
+                        <input class="form-control" type="search" aria-label="Search">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="submit">Search</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </nav>
     </div>
 </body>
 
