Add a basic jumbotron with some placeholder text

--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -90,6 +90,12 @@
                 </form>
             </div>
         </nav>
+        <div class="jumbotron text-center">
+            <h1 class="display-4">Hello world!</h1>
+            <p class="lead">This is some information under a heading that doesn't mean much.</p>
+            <hr class="my-4">
+            <p>Some more information in a darker font probably. Still doesn't mean much, unfortunately.</p>
+        </div>
     </div>
 </body>
 
