Add the initial version of the footer

--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -96,6 +96,51 @@
             <hr class="my-4">
             <p>Some more information in a darker font probably. Still doesn't mean much, unfortunately.</p>
         </div>
+        <footer class="pt-4 my-md-5 border-top">
+            <div class="row">
+                <div class="col-12 col-md">
+                    {% load static %}
+                    <img class="ml-5" src="{% static "hoprgovet/logo.png" %}" width="60px" height="60px" alt="HOPR Logo">
+                    <div class="pt-md-3">
+                        <small class="d-block mb-1 text-muted">House of Peoples' Representatives</small>
+                        <small class="d-block mb-1 text-muted">Addis Ababa, Ethiopia</small>
+                        <small class="d-block mb-1 text-muted">Phone: <a href="#">255-255-2555</a></small>
+                    </div>
+                </div>
+                <div class="col-6 col-md pt-md-4">
+                    <h6>Category</h6>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#"><small>Accessibility</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Contact webmaster</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Feature Stories</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Privacy Policy</small></a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md pt-md-4">
+                    <h6>Category</h6>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#"><small>Site Map</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Site Tools</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Terms of Use</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Watch live.house.gov.et</small></a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-md pt-md-4">
+                    <h6>Category</h6>
+                    <ul class="list-unstyled text-small">
+                        <li><a class="text-muted" href="#"><small>Site Map</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Site Tools</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Terms of Use</small></a></li>
+                        <li><a class="text-muted" href="#"><small>Watch live.house.gov.et</small></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-12 text-center">
+                    <small class="d-block text-muted">Copyright &copy; 2020, Developed by <a href="https://www.siltena.org/">Siltena</a></small>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
