Add horizontal tabbed window for accessing the latest information

--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -30,6 +30,10 @@
             font-size: 14px;
             font-family: "Segoe UI";
         }
+        
+        .nav-tabs .nav-item {
+            font-size: 12px;
+        }
     </style>
 </head>
 <body>
@@ -91,7 +95,7 @@
         </nav>
         <div class="row">
             <div class="col-sm-7">
-                <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+                <div id="carousel-example-1z" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
@@ -137,7 +141,20 @@
                 </div>
             </div>
             <div class="col-sm-5">
-                <!-- TODO: Add more stuff here -->
+                <ul class="nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Committee Schedules</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Proclamations</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Bills & Reports</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
