Add border-top to the jumbotron

--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -93,7 +93,7 @@
                 </form>
             </div>
         </nav>
-        <div class="row">
+        <div class="row border-top pt-3">
             <div class="col-sm-7">
                 <div id="carousel-example-1z" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
