--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -43,10 +43,10 @@
         .list-group small {
             font-size: 12px;
         }
-        
-        .jumbotron-row {
-            height: 300px;
-            overflow: hidden;
+
+        .tab-pane .list-group {
+            max-height: 250px;
+            overflow-y: scroll;
         }
     </style>
 </head>
@@ -107,7 +107,7 @@
                 </form>
             </div>
         </nav>
-        <div class="row border-top pt-3 jumbotron-row">
+        <div class="row border-top pt-3">
             <div class="col-sm-7">
                 <div id="carousel-example-1z" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
