--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>House of Peoples' Representatives</title>
 
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/311f241263.js"> </script>
+
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -116,6 +119,8 @@
                         <a class="nav-link header-link" href="#">Secretariat</a>
                     </li>
                 </ul>
+                <i class="fa fa-circle mr-1" aria-hidden="true" style="color: red; font-size: 10px"></i>
+                <small class="mr-4" style="font-size: 11px">Live</small>
                 <form class="form-inline my-2 my-lg-0">
                     <div class="input-group input-group-sm">
                         <input class="form-control" type="search" aria-label="Search">
