--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -11,8 +11,8 @@
     <!-- Bootstrap 4 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
@@ -79,12 +79,29 @@
     <!-- Custom JavaScript -->
     <script charset="utf-8">
         $(document).ready(function() {
+            /**
+             * Animate the toasts on page load.
+             */
             setTimeout(function () {
                 $("#live-toast").toast("show");
                 setTimeout(function () {
                     $("#reply-toast").toast("show");
                 }, 1000);
             }, 2000);
+
+            /**
+             * Animate the live button (fade in and out).
+             */
+            const liveStatusTimeout = 2000;
+            function fadeOutCallback() {
+                $("#live-status").fadeIn(liveStatusTimeout, fadeInCallback);
+            }
+
+            function fadeInCallback() {
+                $("#live-status").fadeOut(liveStatusTimeout, fadeOutCallback);
+            }
+
+             $("#live-status").fadeIn(liveStatusTimeout, fadeInCallback);
         });
     </script>
 </head>
@@ -136,7 +153,7 @@
                     </li>
                 </ul>
                 <div class="border rounded mr-4">
-                    <i class="fa fa-circle mr-2 ml-2" aria-hidden="true" style="color: red; font-size: 10px"></i>
+                    <i id="live-status" class="fa fa-circle mr-2 ml-2" aria-hidden="true" style="color: red; font-size: 11px"></i>
                     <small class="mr-2" style="font-size: 12px">Live</small>
                 </div>
                 <form class="form-inline my-2 my-lg-0">
