--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -251,8 +251,8 @@
                 <div class="col-sm-2">
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                         <a class="nav-link active" id="v-pills-tab" data-toggle="pill" href="#v-pills-representatives" role="tab" aria-controls="v-pills-representatives" aria-selected="true">Representatives</a>
-                        <a class="nav-link" id="v-pills-leadership-tab" data-toggle="pill" href="#v-pills-leadership" role="tab" aria-controls="v-pills-leadership" aria-selected="false">Leadership</a>
-                        <a class="nav-link" id="v-pills-committees-tab" data-toggle="pill" href="#v-pills-committees" role="tab" aria-controls="v-pills-committees" aria-selected="false">Committees</a>
+                        <a class="nav-link" id="v-pills-leadership-tab" data-toggle="pill" href="#v-pills-leadership" role="tab" aria-controls="v-pills-leadership" aria-selected="false">Committees</a>
+                        <a class="nav-link" id="v-pills-committees-tab" data-toggle="pill" href="#v-pills-committees" role="tab" aria-controls="v-pills-committees" aria-selected="false">Standing Committees</a>
                         <a class="nav-link" id="v-pills-officers-tab" data-toggle="pill" href="#v-pills-officers" role="tab" aria-controls="v-pills-officers" aria-selected="false">Officers</a>
                     </div>
                 </div>
@@ -265,9 +265,61 @@
                             <!-- Map of Ethiopia with regions -->
                             <div id="map"></div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-leadership" role="tabpanel" aria-labelledby="v-pills-leadership-tab">Leadership</div>
-                        <div class="tab-pane fade" id="v-pills-committees" role="tabpanel" aria-labelledby="v-pills-committees-tab">Committees</div>
-                        <div class="tab-pane fade" id="v-pills-officers" role="tabpanel" aria-labelledby="v-pills-officers-tab">Officers</div>
+                        <div class="tab-pane fade" id="v-pills-leadership" role="tabpanel" aria-labelledby="v-pills-leadership-tab">
+                            <ul>
+                                <li><a href="#">Business Advisory</a></li>
+                                <li><a href="#">Coordinating</a></li>
+                                <li><a href="#">National Security</a></li>
+                                <li><a href="#">Friendship Group</a></li>
+                                <li><a href="#">Caucus</a></li>
+                            </ul>
+                        </div>
+                        <div class="tab-pane fade" id="v-pills-committees" role="tabpanel" aria-labelledby="v-pills-committees-tab">
+                            <ul>
+                                <li><a href="#">Agricultural, Pastoralist and Environmental Protection</a></li>
+                                <li><a href="#">Revenue, Budget and Finance</a></li>
+                                <li><a href="#">Foreign Relation and Peace</a></li>
+                                <li><a href="#">Human Resource and Technology</a></li>
+                                <li><a href="#">Trade and Industry</a></li>
+                                <li><a href="#">Legal,Justice and Democracy</a></li>
+                                <li><a href="#">Natural Resource, Irrigation and Energy</a></li>
+                                <li><a href="#">Public Expenditure</a></li>
+                                <li><a href="#">Women, Youth and Social Affairs</a></li>
+                                <li><a href="#">Urban Development, Construction and Transport</a></li>
+                            </ul>
+                        </div>
+                        <div class="tab-pane fade" id="v-pills-officers" role="tabpanel" aria-labelledby="v-pills-officers-tab">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <p class="officer-title"><a href="#">Speaker</a></p>
+                                    <p class="officer-name">Hon. Tagesse Chaffo</p>
+                                </div>
+                                <div class="col-sm-6">
+                                    <p class="officer-title"><a href="#">Deputy Speaker</a></p>
+                                    <p class="officer-name">Hon. W/ro Shitahe Minale</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <p class="officer-title"><a href="#">Government Whip State Minister</a></p>
+                                    <p class="officer-name">Hon. Ato G/Egziabher Araya Bahta</p>
+                                </div>
+                                <div class="col-sm-6">
+                                    <p class="officer-title"><a href="#">Government Whip State Minister</a></p>
+                                    <p class="officer-name">Hon. Amb. Mesfin Cherinet Duberasha</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <p class="officer-title"><a href="#">Government Whip State Minister</a></p>
+                                    <p class="officer-name">Hon. Ato Chala Lemi</p>
+                                </div>
+                                <div class="col-sm-6">
+                                    <p class="officer-title"><a href="#">Government Whip State Minister</a></p>
+                                    <p class="officer-name">Hon. Ato Chane Shimeka Geremei</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-6 border-left">
