WIP: Information section and language dropdown

--- a/hoprgovet/templates/hoprgovet/index.html
+++ b/hoprgovet/templates/hoprgovet/index.html
@@ -104,6 +104,17 @@
                         </div>
                     </div>
                 </form>
+                <div class="dropdown dropdown-languages">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown button
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Action</a>
+                    </div>
+                </div>
             </div>
         </nav>
         <div class="border-top pt-2">
@@ -385,6 +396,54 @@
                                     <p class="mb-1">this is a brief description of the proclamation that provides enough info to decide whether to click or not.</p>
                                 </a>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="border-top mt-2 pt-2">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="card" style="width: 16rem">
+                        {% load static %}
+                        <img class="card-img-top" style="width: 120px;" src="{% static "hoprgovet/logo.png" %}" alt="Card placeholder image">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some information that provides more information on what the card provides.</p>
+                            <a class="btn btn-primary" href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card" style="width: 16rem">
+                        {% load static %}
+                        <img class="card-img-top" style="width: 120px;" src="{% static "hoprgovet/logo.png" %}" alt="Card placeholder image">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some information that provides more information on what the card provides.</p>
+                            <a class="btn btn-primary" href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card" style="width: 16rem">
+                        {% load static %}
+                        <img class="card-img-top" style="width: 120px;" src="{% static "hoprgovet/logo.png" %}" alt="Card placeholder image">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some information that provides more information on what the card provides.</p>
+                            <a class="btn btn-primary" href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="card" style="width: 16rem">
+                        {% load static %}
+                        <img class="card-img-top" style="width: 120px;" src="{% static "hoprgovet/logo.png" %}" alt="Card placeholder image">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some information that provides more information on what the card provides.</p>
+                            <a class="btn btn-primary" href="#">Learn more</a>
                         </div>
                     </div>
                 </div>
